--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/Eserian/frontend-testing-react-project-lvl2/workflows/hexlet-check/badge.svg)](https://github.com/Eserian/frontend-testing-react-project-lvl2/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest --bail"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/Eserian/frontend-testing-react-project-lvl2/issues"
   },
-  "homepage": "https://github.com/Eserian/frontend-testing-react-project-lvl2#readme"
+  "homepage": "https://github.com/Eserian/frontend-testing-react-project-lvl2#readme",
+  "dependencies": {
+    "@hexlet/react-todo-app-with-backend": "^0.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.3"
+  }
 }
