--- a/package.json
+++ b/package.json
@@ -17,12 +17,25 @@
   },
   "homepage": "https://github.com/Eserian/frontend-testing-react-project-lvl2#readme",
   "dependencies": {
-    "@hexlet/react-todo-app-with-backend": "^0.10.0"
+    "@hexlet/react-todo-app-with-backend": "^0.10.0",
+    "react": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@jest/globals": "^27.3.1",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "babel-jest": "^27.3.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^25.2.3"
+    "eslint-plugin-jest": "^25.2.3",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-testing-library": "^4.12.3",
+    "jest": "^27.3.1",
+    "jest-cli": "^27.3.1"
   }
 }
