--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -23,5 +23,6 @@ parserOptions:
 
 rules:
   no-console: 0
+  no-unused-vars: 0
   import/extensions: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
